// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Table Action Creators .changeSummaryTable combines table name and values for payload 1`] = `
Object {
  "payload": Object {
    "page": 1,
    "tableName": "testTable",
  },
  "type": "CHANGE_SUMMARY_TABLE",
}
`;

exports[`Summary Table Action Creators .resetSummaryTable passes on name and default values for payload 1`] = `
Object {
  "payload": Object {
    "order": Object {
      "ascending": true,
      "dataKey": "id",
    },
    "tableName": "testTable",
  },
  "type": "RESET_SUMMARY_TABLE",
}
`;
